<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_tvshow"
        android:icon="@drawable/ic_tvshow_selector"
        android:title="@string/menu_tvshow"
        app:showAsAction="always" />

</menu>